style(*): Adjustment code style
