# proto/rpc.pb.gw.go
@@ -1,5 +1,5 @@
 // Code generated by protoc-gen-grpc-gateway. DO NOT EDIT.
-// source: rpc/rpc.proto
+// source: proto/rpc.proto
 
 /*
 Package proto is a reverse proxy.
@@ -106,17 +106,9 @@ func request_StoreApiService_UpdateConfigStoreInfo_0(ctx context.Context, marsha
 
 }
 
-var (
-	filter_StoreApiService_GetConfigStoreInfo_0 = &utilities.DoubleArray{Encoding: map[string]int{}, Base: []int(nil), Check: []int(nil)}
-)
-
 func request_StoreApiService_GetConfigStoreInfo_0(ctx context.Context, marshaler runtime.Marshaler, client StoreApiServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
 	var protoReq GetConfigStoreInfoRequest
 	var metadata runtime.ServerMetadata
-
-	if err := runtime.PopulateQueryParameters(&protoReq, req.URL.Query(), filter_StoreApiService_GetConfigStoreInfo_0); err != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "%v", err)
-	}
 
 	msg, err := client.GetConfigStoreInfo(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
 	return msg, metadata, err
@@ -378,9 +370,9 @@ var (
 
 	pattern_StoreApiService_PutObjectPresignedUrl_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"object", "uploadurl"}, ""))
 
-	pattern_StoreApiService_UpdateConfigStoreInfo_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"config", "store", "upload"}, ""))
+	pattern_StoreApiService_UpdateConfigStoreInfo_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"config", "upload"}, ""))
 
-	pattern_StoreApiService_GetConfigStoreInfo_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 2, 2}, []string{"config", "store", "download"}, ""))
+	pattern_StoreApiService_GetConfigStoreInfo_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1}, []string{"config", "download"}, ""))
 )
 
 var (
